fixed dark mode extending below page and profile picture inversion

--- a/meliora-frontend/src/app/homepage/homepage.component.css
+++ b/meliora-frontend/src/app/homepage/homepage.component.css
@@ -2,6 +2,10 @@
   display: flex;
 }
 
+body {
+  height: 3000px;
+}
+
 .general {
   height: 100%;
   width: 33.33%;
@@ -15,7 +19,7 @@
 }
 
 .dark-mode {
-  filter: invert(1) hue-rotate(180deg);  
+  filter: invert(1) hue-rotate(180deg);
 }
 
 .big-card {
